# handyman

./: .gitignore  Cargo.toml  LICENSE  Readme.md  docker-compose.example.yml  tasks.example.yaml
domain/models/src/: candle.rs
domain/repository/: Cargo.toml
domain/repository/src/: candles.rs  lib.rs  repository.rs
libs/logger/: Cargo.toml
libs/logger/src/: tracer_logger.rs
migrations/: 20240510174410_create_candles_table.sql
services/handyman/: Cargo.toml
services/handyman/src/: cli.rs  handyman.rs  jupiter.rs  main.rs
services/handyman/src/bitget/: executor.rs  mod.rs
services/handyman/src/yaml/: config.rs  tasks.rs
usecases/bitget/: Cargo.toml
usecases/bitget/src/: entries.rs  executor.rs  granularity.rs  lib.rs
usecases/jupiter/: Cargo.toml
usecases/jupiter/src/: lib.rs
