[package]
name = "handyman"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
repository = { workspace = true }
models = { workspace = true }
logger = { workspace = true }
jupiter = { workspace = true }
bitget = { workspace = true }

sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
anyhow = "1.0.83"
job_scheduler = "1.2.1"
log = "0.4.21"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
clap = "4.5.4"
